--- a/stylesheet.css
+++ b/stylesheet.css
@@ -103,6 +103,11 @@ ul {
   background-color: #999999
 }
 
+.midasi {
+  width: 100%;
+  text-align: center;
+  margin-top: 200px;
+}
 
 .btn {
   padding-left: 5px;
